2005-01-04 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCFilesManager.[hm]:
	(createDirectoriesIfNeededAtPath:): Added and implemented.
	(copyFile:toFile:): ditto.
	(copyFile:intoDirectory:): ditto.

	* Use above methods where it's appropriate.

2005-01-03 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCAddFilesPanel.[hm]: New implementation. Derived from 
	NSOpenPanel.

	* Library/PCFileManager.m: Use PCAddFilesPanel instead of NSOpenPanel.

	* Library/PCProject.m:
	(projectFileFromFile:forKey:): Rewritten to correctly support 
	subprojects' files and libraries.
	(addFiles:forKey:notify:): Add path to PCSearchLibs when adding 
	libraries.

	* Library/PCProjectInspector.m: Observe project dictionary changes and
	reread it. Accept entered value when textfields are losting focus.

	* Library/PCProjectBrowser.m:
	(doubleClick:): Don't try to open libraries.

	* Modules/ApplicationProject/Resources/Main.gorm: Connect delegate to
	AppController (bug #11478).

	* Library/PCProjectEditor.m:
	(editorForFile:categoryPath:windowed:): Call orderFrontEditorForFile:
	to show already opened file (bug #11448).

	* Library/PCEditor.m:
	(_createEditorViewWithFrame:): Remove return of autoreleased ivar.

	* Library/PCFileManager.m:
	(filesForAddOfTypes:): Get list of categories from active project not 
	from root active project.

2004-12-24 Serg Stoyan <stoyan255@ukr.net>

	* "Build Tool" setting from Project Inspector was moved to PC 
	Preferences.

	* Implemented support of document-based applications
	
	* Added "Document types" panel into Project Inspector

	* Library/PCFileManager.m: Fix crashing while calling "Add Files" 
	panel.

2004-10-14 Serg Stoyan <stoyan255@ukr.net>

	* Fixed interface (*.gorm) files wrt to latest GORM changes.

2004-07-22 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCButton.m: Rewritten tooltips code. Almost ready for 
	incorporation into NSView.

	* Library/PCProjectBuilder.m: Use new tooltip code and remove old
	style code.