@@ -56,7 +56,7 @@
 // ==== Class methods
 //==============================================================================
 
-+ (PCFileManager *)fileManager;
++ (PCFileManager *)defaultManager;
 
 //==============================================================================
 // ==== Init and free
