@@ -2,75 +2,41 @@
     "## Comment" = "Do NOT change this file, Gorm maintains it";
     FirstResponder = {
 	Actions = (
-	    "alignCenter:",
 	    "alignLeft:",
-	    "arrangeInFront:",
 	    "capitalizeWord:",
 	    "changeFont:",
-	    "close:",
 	    "copy:",
-	    "copyRuler:",
 	    "delete:",
-	    "deleteForward:",
 	    "deleteToBeginningOfParagraph:",
-	    "deleteToEndOfParagraph:",
 	    "deleteWordBackward:",
-	    "deminiaturize:",
 	    "fax:",
-	    "hideOtherApplications:",
 	    "loosenKerning:",
-	    "lowercaseWord:",
 	    "miniaturize:",
-	    "moveBackward:",
 	    "moveDown:",
-	    "moveForward:",
 	    "moveLeft:",
-	    "moveToBeginningOfDocument:",
 	    "moveToBeginningOfParagraph:",
-	    "moveToEndOfLine:",
 	    "moveUp:",
-	    "moveWordBackward:",
 	    "moveWordForward:",
-	    "newDocument:",
 	    "open:",
-	    "orderBack:",
 	    "orderFrontColorPanel:",
 	    "orderFrontFontPanel:",
-	    "orderFrontStandardAboutPanel:",
 	    "orderOut:",
-	    "pageUp:",
 	    "pasteAsPlainText:",
-	    "pasteFont:",
 	    "performClose:",
-	    "performZoom:",
 	    "raiseBaseline:",
-	    "runPageLayout:",
 	    "saveAllDocuments:",
-	    "saveDocumentAs:",
 	    "scrollLineDown:",
-	    "scrollPageDown:",
 	    "scrollViaScroller:",
-	    "selectLine:",
 	    "selectParagraph:",
-	    "selectText:",
 	    "selectWord:",
-	    "showGuessPanel:",
 	    "showWindow:",
-	    "subscript:",
 	    "swapWithMark:",
-	    "takeFloatValueFrom:",
 	    "takeObjectValueFrom:",
-	    "terminate:",
 	    "toggle:",
-	    "toggleRuler:",
 	    "toggleTraditionalCharacterShape:",
-	    "transposeWords:",
 	    "turnOffLigatures:",
-	    "unhide:",
 	    "unscript:",
-	    "useAllLigatures:",
 	    "useStandardLigatures:",
-	    "zoom:",
 	    "searchOrderPopupDidChange:",
 	    "setSearchOrder:",
 	    "removeSearchOrder:",
@@ -101,7 +67,8 @@
 	    cOptField,
 	    ldOptField,
 	    installPathField,
-	    searchOrderScroll
+	    searchOrderScroll,
+	    searchOrderColumn
 	);
 	Super = NSObject;
     };
