@@ -1,143 +1,75 @@
 {
+    "## Comment" = "Do NOT change this file, Gorm maintains it";
     FirstResponder = {
 	Actions = (
-	    "activateContextHelpMode:",
 	    "alignCenter:",
-	    "alignJustified:",
 	    "alignLeft:",
-	    "alignRight:",
 	    "arrangeInFront:",
-	    "cancel:",
 	    "capitalizeWord:",
-	    "changeColor:",
 	    "changeFont:",
-	    "checkSpelling:",
 	    "close:",
-	    "complete:",
 	    "copy:",
-	    "copyFont:",
 	    "copyRuler:",
-	    "cut:",
 	    "delete:",
-	    "deleteBackward:",
 	    "deleteForward:",
-	    "deleteToBeginningOfLine:",
 	    "deleteToBeginningOfParagraph:",
-	    "deleteToEndOfLine:",
 	    "deleteToEndOfParagraph:",
-	    "deleteToMark:",
 	    "deleteWordBackward:",
-	    "deleteWordForward:",
 	    "deminiaturize:",
-	    "deselectAll:",
 	    "fax:",
-	    "hide:",
 	    "hideOtherApplications:",
-	    "indent:",
 	    "loosenKerning:",
-	    "lowerBaseline:",
 	    "lowercaseWord:",
-	    "makeKeyAndOrderFront:",
 	    "miniaturize:",
-	    "miniaturizeAll:",
 	    "moveBackward:",
-	    "moveBackwardAndModifySelection:",
 	    "moveDown:",
-	    "moveDownAndModifySelection:",
 	    "moveForward:",
-	    "moveForwardAndModifySelection:",
 	    "moveLeft:",
-	    "moveRight:",
 	    "moveToBeginningOfDocument:",
-	    "moveToBeginningOfLine:",
 	    "moveToBeginningOfParagraph:",
-	    "moveToEndOfDocument:",
 	    "moveToEndOfLine:",
-	    "moveToEndOfParagraph:",
 	    "moveUp:",
-	    "moveUpAndModifySelection:",
 	    "moveWordBackward:",
-	    "moveWordBackwardAndModifySelection:",
 	    "moveWordForward:",
-	    "moveWordForwardAndModifySelection:",
 	    "newDocument:",
-	    "ok:",
 	    "open:",
-	    "openDocument:",
 	    "orderBack:",
-	    "orderFront:",
 	    "orderFrontColorPanel:",
-	    "orderFrontDataLinkPanel:",
 	    "orderFrontFontPanel:",
-	    "orderFrontHelpPanel:",
 	    "orderFrontStandardAboutPanel:",
-	    "orderFrontStandardInfoPanel:",
 	    "orderOut:",
-	    "pageDown:",
 	    "pageUp:",
-	    "paste:",
 	    "pasteAsPlainText:",
-	    "pasteAsRichText:",
 	    "pasteFont:",
-	    "pasteRuler:",
 	    "performClose:",
-	    "performMiniaturize:",
 	    "performZoom:",
-	    "print:",
 	    "raiseBaseline:",
-	    "revertDocumentToSaved:",
 	    "runPageLayout:",
-	    "runToolbarCustomizationPalette:",
 	    "saveAllDocuments:",
-	    "saveDocument:",
 	    "saveDocumentAs:",
-	    "saveDocumentTo:",
 	    "scrollLineDown:",
-	    "scrollLineUp:",
 	    "scrollPageDown:",
-	    "scrollPageUp:",
 	    "scrollViaScroller:",
-	    "selectAll:",
 	    "selectLine:",
-	    "selectNextKeyView:",
 	    "selectParagraph:",
-	    "selectPreviousKeyView:",
 	    "selectText:",
-	    "selectToMark:",
 	    "selectWord:",
-	    "showContextHelp:",
 	    "showGuessPanel:",
-	    "showHelp:",
 	    "showWindow:",
-	    "stop:",
 	    "subscript:",
-	    "superscript:",
 	    "swapWithMark:",
-	    "takeDoubleValueFrom:",
 	    "takeFloatValueFrom:",
-	    "takeIntValueFrom:",
 	    "takeObjectValueFrom:",
-	    "takeStringValueFrom:",
 	    "terminate:",
-	    "tightenKerning:",
 	    "toggle:",
-	    "toggleContinuousSpellChecking:",
 	    "toggleRuler:",
-	    "toggleToolbarShown:",
 	    "toggleTraditionalCharacterShape:",
-	    "transpose:",
 	    "transposeWords:",
-	    "turnOffKerning:",
 	    "turnOffLigatures:",
-	    "underline:",
 	    "unhide:",
-	    "unhideAllApplications:",
 	    "unscript:",
-	    "uppercaseWord:",
 	    "useAllLigatures:",
-	    "useStandardKerning:",
 	    "useStandardLigatures:",
-	    "yank:",
 	    "zoom:",
 	    "inspectorPopupDidChange:"
 	);
