@@ -4,7 +4,7 @@
 ADDITIONAL_OBJCFLAGS +=
 ADDITIONAL_CFLAGS +=
 ADDITIONAL_CPPFLAGS +=
-ADDITIONAL_INCLUDE_DIRS += -I../../Library
+ADDITIONAL_INCLUDE_DIRS += -I../..
 ADDITIONAL_LIB_DIRS += -L../../Library/$(GNUSTEP_OBJ_DIR)
 
 BUNDLE_EXTENSION = .bundle
